# poker-next-gen

./: .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.oddslingers.yml  docker-compose.yml  package-lock.json  package.json
.railway/: README.md  railway.ts
backend-core/: .dockerignore  Dockerfile  docker-entrypoint.sh  go.mod  go.sum  main.go  railway.json  railway.toml
backend-core/antibot/: score.go
backend-core/apischema/: reflect.go  registry.go  schema_test.go
backend-core/audit/: arweave.go  emitter.go  postgres.go
backend-core/billing/: tiers.go
backend-core/bot/: bot.go  bot_test.go
backend-core/coaching/: tip.go
backend-core/geo/: geo.go
backend-core/integrations/: didit.go  polygon.go  tripo.go
backend-core/loyalty/: loyalty.go
backend-core/migrations/: 001_poker_schema.sql
docs/: CAPABILITY-WIRING.md  COMMAND_CENTER_WORKFLOW_MAP.md  DEPLOY.md  DOCKER.md  KYC-DIDIT.md  MEMBERSHIP-BILLING.md  ODDSLINGERS.md  RAILWAY.md  SCREEN_INVENTORY.md  SCREEN_MAP.md  UI_REBUILD_PLAN.md
engine-math/: Cargo.toml  Dockerfile  railway.json  railway.toml
engine-math/src/: lib.rs  server.rs
frontend-table/: _ov.mjs  package-lock.json  package.json  phase1-shot.mjs  proof-shot.mjs  railway.json  railway.toml  shot-mix.mjs
mcp-coach/: README.md  package-lock.json  package.json  tsconfig.json
oddslingers-deploy/: Dockerfile  README.md
openproject-mcp/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
scripts/: core-up.sh  doctor.sh  live-up.sh  oddslingers-up.sh  stack-status.sh
(+472 files in other folders)
